Use String.isBlank() instead of trim().isEmpty() in StringUtils